<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MCard</string>
    <string name="Main_text">MCard</string>
    <string name="text2">-</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="text0">Отсканируйте вашу карту ровно по границам. Для сохранения - введите название карты и нажмите на кнопку снизу.</string>
    <string name="custom">Расширенное</string>
    <string name="select">Готово</string>
    <string name="choose_color">Выберите цвет</string>
    <string name="presets_button_text">Назад</string>
    <string name="text_btn_subscribe">Оформить подписку</string>
    <string name="string_MCard">MCard+</string>
    <string name="title_activity_subscribe">ActivitySubscribe</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous">Previous</string>
    <string name="left_menu_subscribe">Дополнительно</string>
    <string name="left_menu_settings">Настройки</string>
    <string name="left_menu_support">Поддержка</string>
    <string name="left_menu_history_operation">История</string>
    <string name="left_menu_global_info">Глобальная площадка</string>
    <string name="left_menu_list_friends">Активность</string>
    <string name="left_menu_user_profile">Профиль</string>
    <string name="left_menu_user_name">Пользователь</string>
    <string name="subscribeInfo">- Увеличение количества пользователей одного аккаунта до 5-ти человек.\n\n
    - Неограниченное хранение / добавление личных и общих карт.\n\n
    - Ежедневное использование функции \"Сортировка карт по дальности магазинов\" на одном аккаунте до 30 раз.\n\n
    - Снятие ограничений на персональный дизайн для карт.\n\n
    - Эксклюзивная рамка фотографии аккаунта в функции \"Глобальный профиль\".\n\n
    - Неизмеримый вклад в развитие данного проекта, ведь приобретая подписку - вы обеспечивайте себе ещё больше крутых функций в будущих обновлениях. Спасибо.
    </string>
    <string name="changeColorCardInfo">1) Режим \"Простой\" - цвет текста на карте чёрно-белый.\n\n2) Режим \"Инверсия\" - цвет текста противоположен преобладающему цвету карты.</string>
    <string name="ResultFindGEO">Остаточный лимит сортировки карт по дальности магазинов</string>
    <string name="ResultFindGEOFinal">Список карт успешно отсортирован по дальности магазинов</string>
    <string name="NoGEOFind">Совпадений ваших карт с магазинами поблизости не обнаружено</string>
    <string name="nameGlobalFragment">Глобальная площадка</string>
    <string name="selectPhotoDesignCard">Выберите фотографию для дизайна карты</string>
    <string name="setImageProgram">image/*</string>
    <string name="SuccessImport">Карта успешно импортирована</string>
    <string name="SuccessSync">Новые данные успешно синхронизированы</string>
    <string name="ReadyCard">Макет карты успешно построен, для изменения данных карты - внесите корректировки в поля ввода</string>
    <string name="AlternativeDesign">Реалистичный дизайн</string>
    <string name="ErrorStage">При считывании данных с карты произошла ошибка - повторите попытку</string>
    <string name="ErrorChangeColor">Ошибка - макет карты не построен, повторите попытку</string>
    <string name="cardName">Название карты</string>
    <string name="colorCardText">Цвет карты (Авто)</string>
    <string name="barcodeCardText">Штрих код карты (Авто)</string>
    <string name="numberCardText">Номер карты (Авто)</string>
    <string name="Subscribe">Подписаться</string>
    <string name="ReqCard">Запрос карты</string>
    <string name="SubscribersList">Список подписчиков</string>
    <string name="PublicCardList">Список публичных карт</string>
    <string name="BlockUser">Заблокировать</string>
    <string name="SuccessUpdatePhoto">Фото аккаунта успешно обновлено</string>
    <string name="FaultLoadPhoto">Произошла ошибка загрузки фотографии</string>
    <string name="LocaleProfileUpdate">Личные данные профиля успешно обновлены</string>
    <string name="Register">Зарегистрироваться</string>
    <string name="NoAccInfo">Нет аккаунта?</string>
    <string name="ResetAccount">Восстановить аккаунт</string>
    <string name="ErrorNetwork">Проверьте подключение к интеренту и повторите попытку ещё раз</string>
    <string name="ErrorAccName">Ошибка - данное имя уже занято, придумайте новое и повторите регистрацию</string>
    <string name="RatingInfo">В этом окне показана ваша позиция по количеству публикаций дисконтных карт в глобальной площадке. Публикуйте больше карт для поднятия своего рейтинга.</string>
    <string name="SuccessRegister">Вы успешно зарегистрировались!</string>
    <string name="userString">Пользователь</string>
    <string name="altDesignName">Реалистичный дизайн</string>
    <string name="changeLogin">Сменить логин</string>
    <string name="changePass">Сменить пароль</string>
    <string name="removeDesignCard">Удалить дизайн</string>
    <string name="changeColor">Изменить цвет</string>
    <string name="NetworkErr">Ошибка интернет соединения. Проверьте подключение к сети и повторите попытку</string>
    <string name="unknownError">Произошла непредвиденная ошибка - повторите попытку</string>
    <string name="paymentError">Введена некорректная сумма</string>
    <string name="loadingInfo">Загрузка данных..</string>
    <string name="settingsCards">Вид карт</string>
    <string name="succsessGravityText">Расположение текста карты успешно изменено</string>
    <string name="errorCardSizeChange">Ошибка - введённые параметры превышают допустимые значения</string>
    <string name="successCardSize">Размер карт успешно изменён</string>
    <string name="successUpdateTextColor">Настройки цвета текста карты успешно обновлены</string>
    <string name="succsessChangeTextSize">Размер текста на картах успешно изменён</string>
    <string name="succsessChangeBorderCard">Настройки закругления границ успешно сохранены</string>
    <string name="defaultNumberCard">1234 5678 9012 3456</string>
    <string name="defaultNameCard">Макет</string>
    <string name="askDefaultSettings">Вы точно хотите сбросить все настройки интерфейса карт? Отменить данное действие будет невозможно.</string>
    <string name="succsessDefaultSettings">Настройки интерфейса карт успешно сброшены</string>
    <string name="addCard">Добавить карту</string>
    <string name="profileOwner">Профиль владельца</string>
    <string name="findSimilarCards">Найти похожие карты</string>
    <string name="goBack">Назад</string>
    <string name="lastSync">Последняя синхронизация:\n</string>
    <string name="updateCards">Кол-во обновлённых карт:</string>
    <string name="successAltDesign">Поиск альтернативного дизайна для карт успешно запущен</string>
    <string name="offlineNetworkMSG">Ошибка - отсутствует подключение к сети</string>
    <string name="dontHaveSubscribe">Состояние подписки: отсутствует</string>
    <string name="errorSmallDateSub">Ошибка - новая продолжительность подписки не может быть большей или равной по отношению к текущей</string>
    <string name="errorRestore">Ошибка соеденения с сервером - повторите попытку заного</string>
    <string name="errorRestoreAccountEmail">Ошибка - неправильно введён логин, повторите попытку</string>
    <string name="errorAccountID">Ошибка - такого аккаунта не существует, проверьте корректность введённых данных</string>
    <string name="errorCheckEmptyText">Ошибка - обнаружены пустые поля, введите корректные данные и повторите попытку</string>
    <string name="successSendPass">Письмо с кодом подтверждения успешно выслано вам на почту, введите его в поле ниже</string>
    <string name="errorConfirmCode">Ошибка - введён неверный код. Повторите попытку заного</string>
    <string name="successChangePassword">Пароль успешно изменён</string>
    <string name="errorServerChangePassword">Произошла ошибка, повторите попытку ещё раз</string>
    <string name="errorInputNumberCard">Ошибка - введён некорректный номер карты</string>
    <string name="errorInputNameCard">Ошибка - введено некорректное название карты</string>
    <string name="errorSyncSingle">Ошибка - данная опция доступна только при выключенной авто синхронизации</string>
    <string name="changeSyncMode">Режим синхронизации успешно изменён. Новые настройки вступят в силу при следующем запуске приложения</string>
    <string name="successSyncData">Данные успешно синхронизированы</string>
    <string name="successSavaDataUseCard">История использования карты успешно сохранена</string>
    <string name="infoRemoveHistory">Вы точно хотите удалить данную запись истории? Отменить это действие будет невозможно</string>
    <string name="warningUpdateGlobalPhoto">Внимание - отсутствует интернет соеденение. Фотография глобального профиля будет автоматически обновлена при подключении к сети</string>
    <string name="errorRemoveAccount">Во время удаления аккаунта произошла непредвиденная ошибка. Повторите попытку заного</string>
    <string name="errorCheckLogin">Ошибка проверки - введён некорректный логин</string>
    <string name="errorCheckPassword">Ошибка проверки - введён некорректный пароль</string>
    <string name="errorCheckID">Введён неккоректное имя аккаунта - повторите попытку</string>
    <string name="infoDevUserApp"><u>Разработчик: Илья Александрович.</u></string>
    <string name="errorRequestCardText">Ошибка - введён некорректный запрос. Повторите попытку</string>
    <string name="errorImportCardCount">Ошибка - нельзя совершать импорт карты более 1-го раза</string>
    <string name="successAcceptRequest">Предложение успешно подтверждено!</string>
    <string name="infoSubscribeSubscribe">Подписка MCard+</string>
    <string name="infoUserSelectSubscribeData">Выбрано:</string>
    <string name="infoBuyInAppSubscribe">Цифровой товар</string>
    <string name="infoSubscribePrice">Стоимость:</string>
    <string name="additionalyIInfoBuySubscribe">Данная покупка не подлежит дальнейшему возврату. Вы можете ещё раз ознакомиться с возможностяими подписки MCard+.</string>
    <string name="btnPayInfo2">Оплатить через Google Play</string>
    <string name="btnPayInfo3">Оплата банковской картой</string>
    <string name="loginHint">Логин (email)</string>
    <string name="passwordHint">Пароль</string>
    <string name="nextDialogBtnName">Далее</string>
    <string name="manuallyCardAddBtnText">Добавить данные вручную</string>
    <string name="additionalDataCardBtnOffText">Без штрих-кода</string>
    <string name="nameDescription">Имя</string>
    <string name="numberDescription">Номер</string>
    <string name="colorDescription">Цвет</string>
    <string name="warningInputDataHint">Обязательно</string>
    <string name="dataStatusViewFirstDescription">Поместите в объектив сторону с названием</string>
    <string name="removeAccountTitle">Удалить аккаунт</string>
    <string name="appInfoTitle">О приложении</string>
    <string name="invalidateCacheTitle">Очистить кеш</string>
    <string name="cacheDescriptionTitle">Обновление изображений для всех карт</string>
    <string name="settingsFirstTitle">Личные данные</string>
    <string name="settingsSecondTitle">Прочее</string>
    <string name="loginPreferencesKey">login</string>
    <string name="passwordPreferencesKey">password</string>
    <string name="deleteAccountPreferencesKey">deleteAccount</string>
    <string name="faqPreferencesKey">faq</string>
    <string name="cachePreferencesKey">cache</string>
    <string name="examplePaymentTitle">Например: 100</string>
    <string name="subHeaderPaymentTitle">Введите любую сумму для пожертвования (от 1-го рубля).</string>
    <string name="headerPaymentTitle">Сумма платежа</string>
</resources>