<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SheetCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/headerView"
            style="@style/BasicTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/headerPaymentTitle"
            android:textColor="@color/color_type_primary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subHeaderView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/sf_classic"
            android:text="@string/subHeaderPaymentTitle"
            android:textColor="@color/color_type_primary"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/paymentLayout"
            style="@style/SecondLayoutTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:boxStrokeWidth="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subHeaderView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/paymentView"
                style="@style/SecondLayoutTextStyle"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:fontFamily="@font/sf_classic"
                android:hint="@string/examplePaymentTitle"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:singleLine="true"
                android:textColorHighlight="@color/white"
                android:textSize="17sp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/paymentButton"
            style="@style/BasicButtonStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/button_color"
            android:text="@string/nextDialogBtnName"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/paymentLayout"
            app:layout_constraintStart_toStartOf="@+id/paymentLayout"
            app:layout_constraintTop_toBottomOf="@+id/paymentLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>